--- a/postgres/postgres.yaml
+++ b/postgres/postgres.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: postgres-pod
+  labels:
+    app: postgres
 spec:
   volumes:
     - name: postgres-storage
@@ -19,3 +21,5 @@ spec:
       env:
         - name: PGDATA
           value: "/var/lib/postgresql/data/pgdata"
+        - name: POSTGRES_PASSWORD
+          value: "POSTGRES_IN_KUBERNETES"
