--- a/busybox.yaml
+++ b/busybox.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: default
 spec:
   containers:
-  - image: busybox
+  - image: odise/busybox-curl
     command:
       - sleep
       - "3600"
