--- a/mongodb/mongodb-service.yaml
+++ b/mongodb/mongodb-service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: postgres-service
+  name: mongodb-service
 spec:
   selector:
-    app: postgres
+    app: mongodb
   ports:
   - protocol: TCP
-    port: 15432
-    targetPort: 5432
+    port: 27017
+    targetPort: 27017
