--- a/mongodb/mongodb-volume-claim.yaml
+++ b/mongodb/mongodb-volume-claim.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: postgres-claim
+  name: mongodb-claim
 spec:
   storageClassName: slow
   accessModes:
