--- a/simple-node-app/Dockerfile
+++ b/simple-node-app/Dockerfile
@@ -15,6 +15,8 @@ ENV MONGO_HOSTNAME "mongodb-service.default"
 ENV MONGO_PORT "27017"
 ENV MONGO_DB "test"
 ENV MONGO_URI "mongodb://${MONGO_HOSTNAME}:${MONGO_PORT}/${MONGO_DB}"
+ENV MONGO_USER "admin"
+ENV MONGO_PASSWORD "admin"
 
 EXPOSE 8080
 CMD [ "npm", "start" ]
