--- a/simple-node-app/simple-node-app.yaml
+++ b/simple-node-app/simple-node-app.yaml
@@ -1,13 +1,32 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1beta1
+kind: Deployment
 metadata:
-  name: simple-node-app-pod
+  name: simple-node-app-deployment
   labels:
     app: simple-node-app
 spec:
-  containers:
-    - name: simple-node-app-container
-      image: simple-node-app:1.0.0
-      ports:
+  replicas: 2
+  selector:
+    matchLabels:
+      app: simple-node-app
+  template:
+    metadata:
+      labels:
+        app: simple-node-app
+    spec:
+      containers:
+      - name: simple-node-app-container
+        image: simple-node-app:1.0.0
+        ports:
         - containerPort: 8080
-          name: "node"
+        env:
+          - name: MONGO_USER
+            valueFrom:
+              secretKeyRef:
+                name: mongodb-secret
+                key: username
+          - name: MONGO_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: mongodb-secret
+                key: password
